@@ -3,7 +3,7 @@
 // ========================================
 // Copyright (c) 2004-2008 Sancho Lerena, slerena@gmail.com
 // Main PHP/SQL code development, project architecture and management.
-// Copyright (c) 2004-2007 Raul Mateos Martin, raulofpandora@gmail.com
+// Copyright (c) 2004-20078 Raul Mateos Martin, raulofpandora@gmail.com
 // CSS and some PHP code additions
 // Please see http://pandora.sourceforge.net for full contribution list
 
@@ -324,6 +324,12 @@ if (comprueba_login() == 0) {
 	}
 	else {
 		echo '</table><br><div class="nf">'.$lang_label["no_agent"].'</div>';
+	      	$id_user = $_SESSION["id_usuario"];
+	if ( (give_acl($id_user, 0, "LM")==1) OR (give_acl($id_user, 0, "AW")==1 ) OR (give_acl($id_user, 0, "PM")==1) OR (give_acl($id_user, 0, "DM")==1) OR (give_acl($id_user, 0, "UM")==1 )){
+	      echo "&nbsp;<form method='post' action='index.php?sec=gagente&
+	sec2=godmode/agentes/configurar_agente&create_agent=1'><input type='submit' class='sub next' name='crt'
+	value='".$lang_label["create_agent"]."'></form>";
+	}
 	}
 
 } else {
