@@ -1,10 +1,9 @@
 <?php
-
 // Pandora FMS - the Free monitoring system
 // ========================================
 // Copyright (c) 2004-2007 Sancho Lerena, slerena@gmail.com
 // Main PHP/SQL code development and project architecture and management
-// Copyright (c) 2004-2007 Raul Mateos Martin, raulofpandora@gmail.com
+// Copyright (c) 2004-2008 Raul Mateos Martin, raulofpandora@gmail.com
 // CSS and some PHP additions
 // Copyright (c) 2006 Jose Navarro <contacto@indiseg.net>
 // Additions to Pandora FMS 1.2 graph code 
@@ -260,11 +259,15 @@
 			}
 			echo "</tr>";
 		}
-
 		echo "</table>";
 	} else {
 		echo "<div class='nf'>".$lang_label["no_agent_def"]."</div>";
+	      	$id_user = $_SESSION["id_usuario"];
+	if ( (give_acl($id_user, 0, "LM")==1) OR (give_acl($id_user, 0, "AW")==1 ) OR (give_acl($id_user, 0, "PM")==1) OR (give_acl($id_user, 0, "DM")==1) OR (give_acl($id_user, 0, "UM")==1 )){
+	      echo "&nbsp;<form method='post' action='index.php?sec=gagente&
+	sec2=godmode/agentes/configurar_agente&create_agent=1'><input type='submit' class='sub next' name='crt'
+	value='".$lang_label["create_agent"]."'></form>";
 	}
-
+	}
 
 ?>
